--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,14 @@
+:root{
+	--green: #B9FF66;
+	--black: #000;
+	--white: #fff;
+	--dark: #191A23;
+}
+
 body {
   font-family: "Space Grotesk", Arial, sans-serif;
-  background-color: #fff;
-  color: #000;
+  background-color: var(--white);
+  color: var(--black);
   font-size: 1.125rem;
 }
 
@@ -21,6 +28,10 @@ body {
 .section-title {
   font-size: 2.5rem;
   font-weight: 500;
+	text-transform: capitalize;
+	display: inline-block;
+	padding: 0.4375rem;
+	background-color: var(--green);
 }
 
 .block-title {
@@ -35,6 +46,6 @@ body {
   border-radius: 0.875rem;
   text-align: center;
 	text-transform: capitalize;
-  background-color: #191A23;
-  color: #fff;
+  background-color: var(--dark);
+  color: var(--white);
 }
