--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,25 @@
 :root{
 	--green: #B9FF66;
 	--black: #000;
-	--white: #fff;
+	--white: #FFF;
 	--dark: #191A23;
+	--grey: #F3F3F3;
+}
+
+.bg-green {
+	background-color: var(--green);
+}
+
+.bg-grey {
+	background-color: var(--grey);
+}
+
+.bg-dark {
+	background-color: var(--dark);
+}
+
+.bg-white {
+	background-color: var(--white);
 }
 
 body {
