7. basic cases template and styles

--- a/css/default.css
+++ b/css/default.css
@@ -42,6 +42,12 @@ body {
   padding: 0px 0.9375rem;
 }
 
+.section-info{
+	display: flex;
+	align-items: center;
+	gap: 40px;
+}
+
 .section-title {
   font-size: 2.5rem;
   font-weight: 500;
@@ -49,6 +55,11 @@ body {
 	display: inline-block;
 	padding: 0.4375rem;
 	background-color: var(--green);
+}
+
+.section-subtitle {
+	max-width: 36.25rem;
+	font-size: 1.125rem;
 }
 
 .block-title {
